--- a/site/css/main-style.css
+++ b/site/css/main-style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import url('https://fonts.googleapis.com/css?family=Comfortaa|Playball');
 
 /* GLOBAL */
 * {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Comfortaa', cursive;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -16,6 +16,14 @@
 a {
     text-decoration: none;
     color: #fff;
+}
+
+li {
+    list-style: none;
+}
+
+header, section {
+    height: 600px;
 }
 
 /* #resume */
@@ -42,7 +50,6 @@ a {
 /* HEADER */
 
 header {
-    height: 600px;
     background: url("../assets/header-img2.jpg");
     color: #fff;
     text-align: center;
@@ -58,20 +65,27 @@ header .container h1 {
 }
 
 #julius {
-    font-size: 2em;
-    font-weight: 700;
+    font-family: "Playball", cursive;
+    font-size: 2.5em;
+    font-weight: 400;
 }
 
 /* #contact */
 
 #contact {
     font-size: .7em;
-    /*text-align: right;
-*/    margin-top: 150px;
+    margin-top: 130px;
+    letter-spacing: 1px;
 }
 
 #fullname {
     font-size: 1.3em;
-    letter-spacing: 1px;
     margin-bottom: 10px;
+}
+
+/* #work */
+
+#work-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
