--- a/site/css/main-style.css
+++ b/site/css/main-style.css
@@ -92,7 +92,7 @@ header .container h1 {
     vertical-align: middle;
 }
 
-/* #work */
+/* #work-section */
 
 .headings {
     text-align: center;
@@ -142,8 +142,11 @@ header .container h1 {
     padding-bottom: 10px;
 }
 
+#work-bottom {
+    padding-bottom: 20px;
+}
+
 #skills-section {
-    height: 700px;
     background-color: #78909C;
     color: #ffffff;
     clear: both;
@@ -161,11 +164,7 @@ header .container h1 {
     }
     #skills-section .grid-container {
         grid-template-columns: auto auto;
-        padding-top: 10px;
-    }
-
-    #skills-section {
-        height: 550px; 
+        padding: 20px;
     }
 
     .left-side {
@@ -180,31 +179,18 @@ header .container h1 {
     .comp-add {
         padding-bottom: 0;
     }
-
-    @media screen and (min-width: 360px)
-    {
-        #skills-section {
-            height: 490px;
-        }
-    }
-    @media screen and (min-width: 768px)
-    {
-        #skills-section {
-            height: 510px;
-        }
-    }
 }
 /* if the browser DOES NOT support css grid */
 @supports not (display: grid)
-{
+{  
+    #skills-section {
+        height: 700px;
+    }
     #skills-section .left-side {
         width: 50%;
     }
     #skills-section .right-side {
         width: 50%;
-    }
-    #skills-section {
-        height: ;
     }
 
     @media screen and (min-width: 768px)
